test/expected/explain_la_star_tsts.out
explain [*this,this]
               ^
16: error: "this" previously captured
